--- a/demo1/src/main/resources/application.properties
+++ b/demo1/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 
+spring.datasource.url=jdbc:mysql://127.0.0.1:8889/BASE 
+#spring.datasource.username=root
+#spring.datasource.password=root
+spring-jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
+spring-jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=false
+
+   # Database 
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+#spring.datasource.url = jdbc:mysql://localhost:3306/logparser
+spring.datasource.username = root
+spring.datasource.password = root
+    
+spring.jpa.database = MYSQL
+spring.jpa.show-sql = true
+    
+    # Hibernate
+hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+hibernate.show_sql: true
+hibernate.hbm2ddl.auto: create
+#entitymanager.packagesToScan
+
